-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (workspace/open/src/hotspot/cpu/x86/frame_x86.cpp:772), pid=15711, tid=15989
# assert(real_frame_size >= _cb->frame_size() && real_frame_size <= 1000000) failed: invalid frame size
#
# JRE version: Java(TM) SE Runtime Environment (18.0+1) (fastdebug build 18-valhalla+1-71)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-valhalla+1-71, mixed mode, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xc31e7a] frame::repair_sender_sp(long*, long**) const+0x9a
Stack: [0x00007f489dcfd000,0x00007f489ddfd000], sp=0x00007f489ddfa680, free space=1013k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xc31e7a] frame::repair_sender_sp(long*, long**) const+0x9a
V [libjvm.so+0xc32b66] frame::sender_for_compiled_frame(RegisterMap*) const+0x56
V [libjvm.so+0xc333c9] frame::sender(RegisterMap*) const+0xe9
V [libjvm.so+0x1963f0c] JavaThread::oops_do_frames(OopClosure*, CodeBlobClosure*) [clone .part.0]+0xcc
V [libjvm.so+0x196e1d7] Threads::possibly_parallel_oops_do(bool, OopClosure*, CodeBlobClosure*)+0x1f7
V [libjvm.so+0xd572d6] G1RootProcessor::process_java_roots(G1RootClosures*, G1GCPhaseTimes*, unsigned int)+0x76
V [libjvm.so+0xd57c90] G1RootProcessor::evacuate_roots(G1ParScanThreadState*, unsigned int)+0x70
V [libjvm.so+0xc8d672] G1EvacuateRegionsTask::scan_roots(G1ParScanThreadState*, unsigned int)+0x22
V [libjvm.so+0xc8e356] G1EvacuateRegionsBaseTask::work(unsigned int)+0x56
V [libjvm.so+0x1adb9e5] GangWorker::run_task(WorkData)+0x85
V [libjvm.so+0x1adbb24] GangWorker::loop()+0x44
V [libjvm.so+0x1adbb7a]
V [libjvm.so+0x1970010] Thread::call_run()+0x100
V [libjvm.so+0x1620664] thread_native_entry(Thread*)+0x104
JavaThread 0x00007f48bc0295a0 (nid = 15712) was being processed
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
j jdk.internal.misc.Unsafe.getValue(Ljava/lang/Object;JLjava/lang/Class;)Ljava/lang/Object;+0 java.base@18-valhalla
J 1596 c2 java.lang.invoke.LambdaForm$MH+0x000000010010f400.invoke(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)I java.base@18-valhalla (142 bytes) @ 0x00007f48b1bd1888 [0x00007f48b1bd1420+0x0000000000000468]
J 1493 c2 java.lang.runtime.PrimitiveObjectMethods.isSubstitutable(Ljava/lang/Object;Ljava/lang/Object;)Z java.base@18-valhalla (133 bytes) @ 0x00007f48b1b869a8 [0x00007f48b1b867e0+0x00000000000001c8]
J 1697 c2 compiler.valhalla.inlinetypes.TestIntrinsics.test63(Qcompiler/valhalla/inlinetypes/MyValue1;Qcompiler/valhalla/inlinetypes/MyValue1;)Z (49 bytes) @ 0x00007f48b1c26730 [0x00007f48b1c25f00+0x0000000000000830]
#
# Internal Error (workspace/open/src/hotspot/cpu/x86/frame_x86.cpp:772), pid=15711, tid=15989
# assert(real_frame_size >= _cb->frame_size() && real_frame_size <= 1000000) failed: invalid frame size
#
# JRE version: Java(TM) SE Runtime Environment (18.0+1) (fastdebug build 18-valhalla+1-71)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 18-valhalla+1-71, mixed mode, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0xc31e7a] frame::repair_sender_sp(long*, long**) const+0x9a
Stack: [0x00007f489dcfd000,0x00007f489ddfd000], sp=0x00007f489ddfa680, free space=1013k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0xc31e7a] frame::repair_sender_sp(long*, long**) const+0x9a
V [libjvm.so+0xc32b66] frame::sender_for_compiled_frame(RegisterMap*) const+0x56
V [libjvm.so+0xc333c9] frame::sender(RegisterMap*) const+0xe9
V [libjvm.so+0x1963f0c] JavaThread::oops_do_frames(OopClosure*, CodeBlobClosure*) [clone .part.0]+0xcc
V [libjvm.so+0x196e1d7] Threads::possibly_parallel_oops_do(bool, OopClosure*, CodeBlobClosure*)+0x1f7
V [libjvm.so+0xd572d6] G1RootProcessor::process_java_roots(G1RootClosures*, G1GCPhaseTimes*, unsigned int)+0x76
V [libjvm.so+0xd57c90] G1RootProcessor::evacuate_roots(G1ParScanThreadState*, unsigned int)+0x70
V [libjvm.so+0xc8d672] G1EvacuateRegionsTask::scan_roots(G1ParScanThreadState*, unsigned int)+0x22
V [libjvm.so+0xc8e356] G1EvacuateRegionsBaseTask::work(unsigned int)+0x56
V [libjvm.so+0x1adb9e5] GangWorker::run_task(WorkData)+0x85
V [libjvm.so+0x1adbb24] GangWorker::loop()+0x44
V [libjvm.so+0x1adbb7a]
V [libjvm.so+0x1970010] Thread::call_run()+0x100
V [libjvm.so+0x1620664] thread_native_entry(Thread*)+0x104
JavaThread 0x00007f48bc0295a0 (nid = 15712) was being processed
Java frames: (J=compiled Java code, j=interpreted, Vv=VM code)
j jdk.internal.misc.Unsafe.getValue(Ljava/lang/Object;JLjava/lang/Class;)Ljava/lang/Object;+0 java.base@18-valhalla
J 1596 c2 java.lang.invoke.LambdaForm$MH+0x000000010010f400.invoke(Ljava/lang/Object;Ljava/lang/Object;Ljava/lang/Object;)I java.base@18-valhalla (142 bytes) @ 0x00007f48b1bd1888 [0x00007f48b1bd1420+0x0000000000000468]
J 1493 c2 java.lang.runtime.PrimitiveObjectMethods.isSubstitutable(Ljava/lang/Object;Ljava/lang/Object;)Z java.base@18-valhalla (133 bytes) @ 0x00007f48b1b869a8 [0x00007f48b1b867e0+0x00000000000001c8]
J 1697 c2 compiler.valhalla.inlinetypes.TestIntrinsics.test63(Qcompiler/valhalla/inlinetypes/MyValue1;Qcompiler/valhalla/inlinetypes/MyValue1;)Z (49 bytes) @ 0x00007f48b1c26730 [0x00007f48b1c25f00+0x0000000000000830]
- relates to
-
JDK-8272760 [lworld] Aarch64 part of JDK-8272753
-
- Resolved
-