8272753: [lworld] "Invalid frame size" assert in frame::repair_sender_sp